fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -43,5 +43,4 @@ a{
 #main{
   position: absolute;
   padding-top: 14%;
-  padding-right: 5px;
 }
